[package]
name = "fastann"
version = "0.2.0"
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastann"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]

[dependencies]
fa = { package = "fastann", path = "../../fastann" }